# ndc-cph-2025

./: Makefile  README.md
acme/: Cargo.toml  Makefile  composed.wasm  spin.toml
acme/src/: lib.rs
acme/src/handlers/: mod.rs
acme/src/models/: mod.rs
acme/src/registrations/: mod.rs
acme/src/webhook/: mod.rs
cyberdyne/: Cargo.toml  Makefile  composed.wasm  spin.toml
cyberdyne/src/: lib.rs
signing/: Cargo.toml
signing/src/: lib.rs
wit/: world.wit
wonka/: Makefile  app.py  requirements.txt
wonka/wit_world/imports/: verify.py
