[package]
name = "acme"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "5.0"
uuid = { version = "1.18.1", features = ["v4"] }
wit-bindgen = "0.45.1"
