[package]
name = "cyberdyne"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
data-encoding = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
spin-sdk = "5.0.0"
wit-bindgen = "0.45.1"
